--- a/ch6_view/src/main/res/layout/linearlayout.xml
+++ b/ch6_view/src/main/res/layout/linearlayout.xml
@@ -84,10 +84,11 @@
             android:layout_weight="1"/>
         <!--TextView에  android:layout_gravity="right"이거를 적었음에도 안됨 웹 사이트에 찾아 보니 View를 넣으면 된다고  https://zluoy.tistory.com/28 출쳐-->
         <TextView
-
+            android:layout_marginEnd="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="center|right"
+            android:textSize="10dp"
             android:text="1월1일"/>
 
     </LinearLayout>
