메신저 앱의 인트로 화면 만들기 하는중

--- a/ch9_resource/src/main/res/layout-land/activity_main.xml
+++ b/ch9_resource/src/main/res/layout-land/activity_main.xml
@@ -3,50 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp">
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/intro"
-        android:layout_centerHorizontal="true"
-        />
-
     <TextView
+        android:id="@+id/mainTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/mainTextView"
         android:text="@string/intro_main"
         android:textSize="20dp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/image"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detailTextView"
-        android:text="@string/intro_detail"
-        android:gravity="center_horizontal"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/mainTextView"
         android:layout_marginTop="20dp"/>
     <TextView
+        android:id="@+id/detailTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/intro_detail"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/mainTextView"
+        android:layout_marginTop="20dp"/>
+    <TextView
         android:id="@+id/delayTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/intro_delay"
         android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
-        android:gravity="center_horizontal"/>
+        android:layout_marginBottom="20dp"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/intro_button"
         android:background="@drawable/round_button"
-        android:layout_centerHorizontal="true"
         android:textColor="#fff"
-        android:layout_above="@id/delayTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/delayTextView"
         android:layout_marginBottom="20dp"/>
 </RelativeLayout>
