--- a/ch9_resource/src/main/res/layout/activity_main.xml
+++ b/ch9_resource/src/main/res/layout/activity_main.xml
@@ -41,6 +41,7 @@
         android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"/>
     <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/intro_button"
