--- a/permission/src/main/res/layout/activity_main.xml
+++ b/permission/src/main/res/layout/activity_main.xml
@@ -17,4 +17,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/camera_button" />
 
+    <Button
+        android:id="@+id/toast_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/camera_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
