AlertDialog 공부 (알림창)

--- a/permission/src/main/res/layout/activity_main.xml
+++ b/permission/src/main/res/layout/activity_main.xml
@@ -4,8 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
+    tools:context=".MainActivity"
+    android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
     <Button
         android:layout_margin="10dp"
         android:id="@+id/camera_button"
@@ -30,5 +34,25 @@
         android:text="알림 창"
         tools:layout_editor_absoluteX="161dp"
         tools:layout_editor_absoluteY="0dp" />
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/alarm_setItems_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="알림 창 Items" />
+        <Button
+            android:id="@+id/alarm_checkbox_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="알림 창 checkbox"/>
+    </LinearLayout>
 
 </LinearLayout>
