--- a/jetpack/src/main/res/layout/activity_main.xml
+++ b/jetpack/src/main/res/layout/activity_main.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/Toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary"/>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -37,6 +42,19 @@
             android:text="010-4607-0741"
             android:layout_margin="10dp"
             android:autoLink="phone"/>
+        <TextView
+            android:id="@+id/TextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:text="Test"/>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/AppCompatTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test"
+            android:layout_margin="10dp"/>
+
     </LinearLayout>
 
 </LinearLayout>
