Ch11_jetpack(애러 고침)

--- a/ch11_jetpack/src/main/res/menu/menu_main.xml
+++ b/ch11_jetpack/src/main/res/menu/menu_main.xml
@@ -4,5 +4,5 @@
     <item android:id="@+id/menu_search"
         android:title="search"
         app:showAsAction="always"
-        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"/>
+        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 </menu>
