--- a/ch11_jetpack/src/main/res/layout/activity_main.xml
+++ b/ch11_jetpack/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"/>
+            android:background="#0078FF"/>
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
