--- a/ch11_jetpack/src/main/res/values/themes.xml
+++ b/ch11_jetpack/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.AndroidLab" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.VacationStudy" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#0078FF</item>
         <item name="colorPrimaryVariant">#00F</item>
