--- a/ch11_jetpack/src/main/res/layout/item_recyclerview.xml
+++ b/ch11_jetpack/src/main/res/layout/item_recyclerview.xml
@@ -14,6 +14,5 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="16dp"
-        />
+        android:textSize="16dp"/>
 </LinearLayout>
