--- a/ch13_activity/src/main/res/layout/activity_main.xml
+++ b/ch13_activity/src/main/res/layout/activity_main.xml
@@ -15,10 +15,13 @@
         android:id="@+id/main_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        app:icon="@android:drawable/ic_input_add"
-        android:text="Add Todo"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        android:text="Add Todo"
+        app:icon="@android:drawable/ic_input_add" />
 
 </RelativeLayout>
