--- a/databinding/src/main/res/layout/activity_main.xml
+++ b/databinding/src/main/res/layout/activity_main.xml
@@ -2,11 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
-        <import type="com.alt.databinding.MainActivity"/>
         <variable
-            name="text"
-            type="String" />
+            name="main"
+            type="com.alt.databinding.MainActivity"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,24 +15,24 @@
         tools:context=".MainActivity">
 
         <TextView
-            android:id="@+id/text_view"
+            android:id="@+id/hello_text_view"
+            android:text="Hello!"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{text}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
-        <EditText
-            android:id="@+id/edit_text"
+        <Button
+            android:id="@+id/btn_change"
+            android:text="Text Change!"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{text}"
-            app:layout_constraintBottom_toTopOf="@+id/text_view"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hello_text_view"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
